portfolio page is now online and working

--- a/unicorn/public/refurbishments/interior-refurbs/index.html
+++ b/unicorn/public/refurbishments/interior-refurbs/index.html
@@ -4,11 +4,11 @@
     <title>Interior Refurbishment</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="/assets/css/main.css"/>
-    <link rel="canonical" href="/refurbishments/interior-refurbs/">
-    <noscript><link rel="stylesheet" href="/assets/css/noscript.css"/></noscript>
+    <link rel="stylesheet" href="/portfolio/unicorn/assets/css/main.css"/>
+    <link rel="canonical" href="/portfolio/unicorn/refurbishments/interior-refurbs/">
+    <noscript><link rel="stylesheet" href="/portfolio/unicorn/assets/css/noscript.css"/></noscript>
     <style>
-        :root{--site-background : url("/images/bg.jpg")};
+        :root{--site-background : url("/portfolio/unicorn/images/bg.jpg")};
     </style> 
     
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
@@ -27,7 +27,7 @@
                     </div>
                     <div class="content">
                         <div class="inner">
-                            <h1><a href="/">Go Home</a></h1>
+                            <h1><a href="https://wallaceandwang.com/portfolio/unicorn/">Go Home</a></h1>
                             <p>
                                 Nothing to see here
                             </p>
@@ -49,10 +49,10 @@
 
 
     
-    <script src=/assets/js/jquery.min.js></script>
-    <script src=/assets/js/browser.min.js></script>
-    <script src=/assets/js/breakpoints.min.js></script>
-    <script src=/assets/js/util.js></script>
-    <script src=/assets/js/main.js></script>
+    <script src=/portfolio/unicorn/assets/js/jquery.min.js></script>
+    <script src=/portfolio/unicorn/assets/js/browser.min.js></script>
+    <script src=/portfolio/unicorn/assets/js/breakpoints.min.js></script>
+    <script src=/portfolio/unicorn/assets/js/util.js></script>
+    <script src=/portfolio/unicorn/assets/js/main.js></script>
 
 </html>
