--- a/public/index.html
+++ b/public/index.html
@@ -123,7 +123,7 @@ SW2 3BU</p>
 
                 
 <footer id="footer">
-    <p> Website built by <a href="https://wallaceandwang.com"> Wallace & Wang Ltd</a> // Content is &copy; protected by <a href="https://unicorn-services.com"> Unicorn Services Ltd</a>.</p>
+    <p> Website built by <a href="https://wallaceandwang.com"> Wallace & Wang Ltd</a> // Content is &copy; protected by <a href="./index.html"> Unicorn Services Ltd</a>.</p>
 </footer>
 
         </div>
@@ -135,10 +135,10 @@ SW2 3BU</p>
 
 
     
-    <script src=/portfolio/unicorn/assets/js/jquery.min.js></script>
-    <script src=/portfolio/unicorn/assets/js/browser.min.js></script>
-    <script src=/portfolio/unicorn/assets/js/breakpoints.min.js></script>
-    <script src=/portfolio/unicorn/assets/js/util.js></script>
-    <script src=/portfolio/unicorn/assets/js/main.js></script>
+    <script src=./assets/js/jquery.min.js></script>
+    <script src=./assets/js/browser.min.js></script>
+    <script src=./assets/js/breakpoints.min.js></script>
+    <script src=./assets/js/util.js></script>
+    <script src=./assets/js/main.js></script>
 
 </html>
