--- a/public/new-builds/croydon-mosque/index.html
+++ b/public/new-builds/croydon-mosque/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Croydon Mosque</title>
     <meta charset="utf-8" />
+    <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="./assets/css/main.css"/>
     <link rel="canonical" href="./new-builds/croydon-mosque/">
