--- a/public/refurbishments/index.html
+++ b/public/refurbishments/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Refurbsishments</title>
+    <link rel="icon" href="./favicon.ico" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="./assets/css/main.css"/>
