--- a/public/refurbishments/interior-refurbs/index.html
+++ b/public/refurbishments/interior-refurbs/index.html
@@ -38,7 +38,7 @@
 
                 
 <footer id="footer">
-    <p> Website built by <a href="https://wallaceandwang.com"> Wallace & Wang Ltd</a> // Content is &copy; protected by <a href="../index.html"> Unicorn Services Ltd</a>.</p>
+    <p> Website built by <a href="https://wallaceandwang.com"> Wallace & Wang Ltd</a> // Content is &copy; protected by <a href="../../index.html"> Unicorn Services Ltd</a>.</p>
 </footer>
 
         </div>
